Delete and details buttons added to project dashboard

--- a/templates/projects/tasks.html
+++ b/templates/projects/tasks.html
@@ -98,6 +98,24 @@
                                 </a>
                             </div>
                             
+                            <div id="delete_project" class="col-sm-6 col-md-4">
+                                <a href="{{url_for('project.delete', short_name=project.short_name)}}" rel="nofollow">
+                                    <div class="well">
+                                        <i class="fa fa-trash fa-4x"></i>
+                                        <h3 class="margin-bottom-xs">{{_('Delete Project')}}</h3>
+                                    </div>
+                                </a>
+                            </div>
+                            
+                            <div id="project_details" class="col-sm-6 col-md-4">
+                                <a href="{{ url_for('blplugin.update', short_name = project.short_name) }}" rel="nofollow">
+                                    <div class="well">
+                                        <i class="fa fa-file-text-o fa-4x"></i>
+                                        <h3 class="margin-bottom-xs">{{_('Project Details')}}</h3>
+                                    </div>
+                                </a>
+                            </div>
+                            
                         {% endif %}
                     </div>
                 </div>
