--- a/templates/projects/tasks.html
+++ b/templates/projects/tasks.html
@@ -108,7 +108,7 @@
                             </div>
                             
                             <div id="project_details" class="col-sm-6 col-md-4">
-                                <a href="{{ url_for('blplugin.update', short_name = project.short_name) }}" rel="nofollow">
+                                <a href="{{ url_for('project.update', short_name = project.short_name) }}" rel="nofollow">
                                     <div class="well">
                                         <i class="fa fa-file-text-o fa-4x"></i>
                                         <h3 class="margin-bottom-xs">{{_('Project Details')}}</h3>
