--- a/templates/account/projects.html
+++ b/templates/account/projects.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
  
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="1; url={{ url_for('blplugin.open_project') }}">
+<meta http-equiv="refresh" content="1; url={{ url_for('account.projects') }}">
  
 <script>
-  window.location.href = "{{ url_for('blplugin.open_project') }}"
+  window.location.href = "{{ url_for('account.projects') }}"
 </script>
  
 <title>Page Redirection</title>
  
-If you are not redirected automatically, follow the <a href='{{ url_for('blplugin.open_project') }}http://example.com'>link to the new page</a>
+If you are not redirected automatically, follow the <a href='{{ url_for('account.projects') }}http://example.com'>link to the new page</a>
