Flash messages added to error pages

--- a/templates/401.html
+++ b/templates/401.html
@@ -4,6 +4,7 @@
 {% block content %}
     <div class="container-padded">
         <div class="container container-padded">
+            {% include "_flash_messages.html" %}
             <div class="col-md-12">
                 <h1><strong>Unauthorized</strong></h1>
                 <p class="lead">You are not authorized to access the URL requested.</p>
