--- a/templates/404.html
+++ b/templates/404.html
@@ -4,6 +4,7 @@
 {% block content %}
     <div class="container-padded">
         <div class="container container-padded">
+            {% include "_flash_messages.html" %}
             <h1>Page not found!</h1>
             <p class="lead">We're sorry, but we can't find the page that you're looking for.</p>
             <a id="btnHome" href="{{url_for('home.home')}}" class="btn btn-inverse" style="display:none;"> 
