--- a/templates/500.html
+++ b/templates/500.html
@@ -4,6 +4,7 @@
 {% block content %}
     <div class="container-padded">
         <div class="container container-padded">
+            {% include "_flash_messages.html" %}
             <div class="col-md-12">
                 <h1>Ooops, Something's broken</h1>
                 <p class="lead">It looks as though there's a problem with our system.</p>
