--- a/templates/account/_helpers.html
+++ b/templates/account/_helpers.html
@@ -62,18 +62,10 @@
         </div>
         <hr class="extra-margins">
             
-        <div class="text-center">
+        <div class="col-sm-10 col-sm-offset-1">
             <p><i class="fa fa-user"></i> {{ _('Username')}}: {{ user.name }}</p>
             {% if private %}
-            <p><i class="fa fa-envelope"></i> {{_('E-mail')}}: {{ user.email_addr }}</p>
-                {% if (user.valid_email == False) %}
-                  {% if (user.confirmation_email_sent == False) %}
-                  <a href="{{ url_for('account.confirm_email')}}" class="btn btn-sm">Validate email</a>
-                  {% else %}
-                  <a href="#" class="btn btn-sm disabled">Email sent for validation</a>
-                  {% endif %}
-                {% endif %}
-                
+                <p><i class="fa fa-envelope"></i> {{_('E-mail')}}: {{ user.email_addr }}</p>
             {% endif %}
             
         
@@ -84,6 +76,13 @@
                 <p><i class="fa fa-key"></i> {{ _('API Key') }}: {{user.api_key}}</p>
                 
                 <a href="{{ url_for('account.update_profile', name=user.name) }}" class="btn btn-default btn-sm btn-padded"><i class="fa fa-user"></i> {{ _('Edit') }}</a>
+                {% if (user.valid_email == False) %}
+                  {% if (user.confirmation_email_sent == False) %}
+                  <a href="{{ url_for('account.confirm_email')}}" class="btn btn-danger">Validate email</a>
+                  {% else %}
+                  <a href="#" class="label label-success disabled">Email sent for validation</a>
+                  {% endif %}
+                {% endif %}
             {% endif %}
         </div>
     </div>
