--- a/templates/help/_tos.html
+++ b/templates/help/_tos.html
@@ -1,5 +1,5 @@
 
-<div class="container container-padded">
+<div class="container container-main">
     <div class="col-md-11">
         <div class="row">
             <div class="col-sm-12">
@@ -21,11 +21,11 @@
                     <p>All use of our web services are subject to our terms for web users. There are further terms if you have signed up for an account with one of our services. At the end are some general terms and definitions.</p>
                 </section>
                 <section id="tos-web-services">
-                    <h1>Terms for use of our web services</h1>
+                    <h1 class="padding-top-sm">Terms for use of our web services</h1>
         
                     <p>Web services include our API’s as well as any of our websites.</p>
         
-                    <h2>Disclaimer</h2>
+                    <h2 class="padding-top-xs">Disclaimer</h2>
         
                     <p>While we are proud of the services we provide to the world for free and try to make them reliable and useful, we make no promises about them. All web services are certain to fail some of the time. We adapt and change our services from time to time, so you may find that something that worked for you may cease to work. We may also stop supplying any service, temporarily or permanently or block access to our services to anyone for any reason.
                     </p>            
@@ -36,7 +36,7 @@
                         <li>We encourage the use of one of the <a href="http://okfn.org/licenses/">open data commons licences from the Open Knowledge Foundation</a> but we cannot give any warranty that they will work in the way expected or should be used for any specific purpose. If in doubt, you should take your own legal advice.</li>
                         <!--<li>The API supplied is not guaranteed to provide an answer with 100% certainty. Copyright law is complex and there may be obscure cases that are not handled correctly. It is intended to be a starting point, not the word of God.</li>-->
                     </ul>
-                    <h2>What you agree</h2>
+                    <h2 class="padding-top-xs">What you agree</h2>
         
                     <p>You agree not to use our websites to do any of the following:</p>
                     <ul>
@@ -46,14 +46,14 @@
                         <li>try to access our systems in a way other than those advertised by us and, in particular, to use a web crawler that does not respect the robots exclusion policy.</li>
                     </ul>
         
-                    <h2>Other websites</h2>
+                    <h2 class="padding-top-xs">Other websites</h2>
         
                     <p>Some of our activities are carried out on web platforms provided by third parties. For example the source code for Flickr Person Finder is hosted on Github. If you make use of any service where that is the case, you are responsible for complying with any terms of service of the third party platform.</p>
-                    <h2>Accounts</h2>
+                    <h2 class="padding-top-xs">Accounts</h2>
         
                     <p>Some of our services require you to create an account in order to make certain, or any, use of the service. All our accounts are subject to the following rules.</p>
         
-                    <h2>Rules for our accounts</h2>
+                    <h2 class="padding-top-xs">Rules for our accounts</h2>
         
                     <p>You must be at least 13 years old and a human being.</p>
         
@@ -67,12 +67,12 @@
         
                     <p>Unless an account is associated with a paid-for service, we may suspend or terminate it at any time. Equally, you may close your account at any time</p>
         
-                    <h2>Community Members</h2>
+                    <h2 class="padding-top-xs">Community Members</h2>
         
                     <p>Our most important class of account is one <a href="{{url_for('account.signin')}}">you may create</a> in order to become a community member. By registering as a community member, you are acknowledging your connection to us. You are subject to any rules for community members we may publish and we may send you email messages we think appropriate for members, for example in order to poll you on some important issue.</p>
         
                     <p>Community membership is not membership in the formal sense of membership of a company limited by guarantee.</p>
-                    <h2>Content and intellectual property</h2>
+                    <h2 class="padding-top-xs">Content and intellectual property</h2>
                     <h3>What we do with your content</h3>
         
                     <p>If you contribute content to any of our services, for example by commenting on a task, or uploading data, then as a general rule you agree to licence that content to us under the same licence as prevails for that service or website.</p>
@@ -87,7 +87,7 @@
         
                     <p>As a general rule, this agreement will not change the ownership of any intellectual property belonging to either party. Where your content is used by us or vice versa both you and we would do so under a licence (see above).</p>
         
-                    <h2>Liability</h2>
+                    <h2 class="padding-top-xs">Liability</h2>
                     <h3>Indemnities – where you may owe us</h3>
         
                     <p>If you breach any of your obligations under this agreement and, as a result, cause us to be sued by anyone else, you will have to compensate us for any loss we have suffered as a result, which includes any costs, such as paying lawyers, or for our own time, we incur defending a claim as well as any damages awarded. If your breach causes you to be sued by someone else, you will not sue us for any loss you suffer as a result.</p>
@@ -105,7 +105,7 @@
         
                     <p>We exclude, in so far as we are allowed, any warranties that would be implied by law.</p>
         
-                    <h2>General conditions</h2>
+                    <h2 class="padding-top-xs">General conditions</h2>
                     <h3>This agreement</h3>
         
                     <p>We may update these terms and conditions at any time. If we do so, we will announce the change on our blog. Any changes will be binding on you from the moment we announce them.</p>
