Corrected variable name

--- a/templates/stats/global.html
+++ b/templates/stats/global.html
@@ -308,7 +308,7 @@ $(function(){
             $contributions = {{task_runs_daily|safe}}['days'];
             $completed = {{tasks_completed_daily|safe}}['days'];
             
-            $contributedTasks = {{task_runs_daily|safe}}['tasks'];
+            $contributionTasks = {{task_runs_daily|safe}}['tasks'];
             $completedTasks = {{tasks_completed_daily|safe}}['tasks'];
             
             var compiledDates = $contributions.concat($completed);
